# rand_tool

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build_and_push.yml
src/: args.rs  lib.rs  main.rs  pwd_info.rs
tests/: args_test.rs  base64_test.rs  cli_tests.rs  generate_fn_test.rs
