[package]
name = "rand_tool"
version = "0.1.2"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/maifuwa/rand_tool"
description = "Powerful command-line tool for generating strong, random passwords and ports."

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
passwords = "3.1.16"
rand = "0.8.5"
uuid = { version = "1.11.0", features = ["v4"] }
