[package]
name = "rand_tool"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/maifuwa/rand_tool"
description = """
A formidable random number generator capable of producing passwords,
service ports, and UUIDs, alongside the ability to encode and decode Base64.
"""

[[bin]]
name = "rand_tool"
path = "src/bin/cli.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
passwords = "3"
rand = "0.9.2"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22.1"